# s11n

./: .gitignore  CMakeLists.txt  README.md
include/me/s11n/: builtin_types_helper.h  field_coder.h  rtti_type_coder.h  type_coder.h
include/me/s11n/payload_coder/: payload_coder.h
include/me/s11n/raw_coder/: builtin_types_helper.h  raw_coder.h  type_coder.h
include/me/s11n/utils/: common.h  endianness_helper.h  log2_floor_helper.h  port.h  simple_buffer.h  size_cache.h
test/: CMakeLists.txt  built_in_type_test.cpp  custom_record_test.cpp  field_test.cpp  rtti_table.cpp  rtti_type_test.cpp  util_test.cpp
test/demo_classes/: foo.h  foo.s11n.h  rtti_classes.h  rtti_classes.s11n.h
